--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,5 +1,4 @@
 body,
-h1,
 h2,
 h3,
 h4,
@@ -28,7 +27,11 @@ ol {
 main {
   display: block;
 }
-h1,
+h1 {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 0.67em 0;
+}
 h2,
 h3,
 h4,
