MES-1241: Show version and release date in UI

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -46,6 +46,15 @@
       }
     }
 
+    &.has-version {
+      .el-scrollbar {
+        height: calc(100% - 80px);
+      }
+      &.has-logo .el-scrollbar {
+        height: calc(100% - 115px);
+      }
+    }
+
     .is-horizontal {
       display: none;
     }
